--- a/TaskManager/Views/Shared/_Layout.cshtml
+++ b/TaskManager/Views/Shared/_Layout.cshtml
@@ -26,13 +26,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">TaskManager</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Yeni Plan</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Plans">Planlar</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="EndPlans">Gerçekleşen Planlar</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="InCompletePlans">Tamamlanamayan Planlar</a></li>
+                    <li><a asp-area="" asp-controller="User" asp-action="Logout"><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;Çıkış</a></li>
                 </ul>
             </div>
         </div>
@@ -42,10 +43,6 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2020 - TaskManager</p>
-        </footer>
     </div>
 
     <environment include="Development">
